Add volumes for hot reloading

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,10 @@
-FROM python:3.13
+FROM python:3.13.2
 
 WORKDIR /app
 
 COPY . .
 
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN python manage.py migrate
