--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,7 @@
 services:
-    backend:
-        build: ./backend
-        volumes:
-            - ./backend:/app
-        ports:
-            - "8000:8000"
-        env_file:
-            - backend/.env
-        depends_on:
-            - db
-
-    frontend:
-        build: ./frontend
-        volumes:
-            - ./frontend:/app
-        ports:
-            - "5173:5173"
-        depends_on:
-            - backend
-
     db:
         image: mysql:8
+        container_name: db
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: 123456
