--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,28 @@
 services:
+    backend:
+        build: ./backend
+        volumes:
+            - ./backend:/app
+        ports:
+            - "8000:8000"
+        env_file:
+            - backend/.env
+        environment:
+            - DB_HOST=db
+        depends_on:
+            - db
+
+    frontend:
+        build: ./frontend
+        volumes:
+            - ./frontend:/app
+        ports:
+            - "5173:5173"
+        depends_on:
+            - backend
+
     db:
         image: mysql:8
-        container_name: db
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: 123456
@@ -10,6 +31,10 @@ services:
             - "3306:3306"
         volumes:
             - db_data:/var/lib/mysql
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+            timeout: 5s
+            retries: 160
 
 volumes:
     db_data:
