--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,8 @@
     "react-router-dom": "^7.1.5",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
