--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
