--- a/render.yaml
+++ b/render.yaml
@@ -34,7 +34,7 @@ services:
   - type: web
     name: stayhub
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
     staticPublishPath: frontend/dist
     routes:
       - type: rewrite
@@ -42,4 +42,4 @@ services:
         destination: /index.html
     envVars:
       - key: VITE_API_URL
-        value: https://homestay-backend.onrender.com
+        value: https://stayhub-backend-yb04.onrender.com
